@@ -50,6 +50,6 @@ COPY --from=builder /app/artcoded/target/api-backend.jar ./api-backend.jar
 #ENV JAVA_OPTS "--enable-preview -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI"
 
 # add  "--log.file=/tmp/truffle.log" if it's too verbose
-ENTRYPOINT [ "java", "--enable-preview","-Xtune:virtualized","-XX:+CompactStrings", "-Xshareclasses:cacheDir=/opt/shareclasses", "-jar","/app/api-backend.jar"]
+ENTRYPOINT [ "java", "-Xtune:virtualized","-XX:+CompactStrings", "-Xshareclasses:cacheDir=/opt/shareclasses", "-jar","/app/api-backend.jar"]
 #ENTRYPOINT [ "sh", "-c","java $JAVA_OPTS  -jar /app/api-backend.jar"]
 
